added some <p> tags to index file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ demo project
 </title>
 </head>
 <body>
-
 <h1>This is my first web app on Azure!</h1>
-
+  <p>This paragraph was added to this file via branching on GitHub</p>
+  <p>GitHub is awesome!</p>
 </body>
 </html
