fixed broken html (closing) tag

--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ demo project
   <p>This paragraph was added to this file via branching on GitHub</p>
   <p>GitHub is awesome!</p>
 </body>
-</html
+</html>
