added h3 line to index file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,5 +10,6 @@ demo project
 <h1>This is my first web app on Azure!</h1>
   <p>This paragraph was added to this file via branching on GitHub</p>
   <p>GitHub is awesome!</p>
+  <h3>This is heading 3. made on a branch. cool, right ?</h3>
 </body>
 </html>
