--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ demo project
 </head>
 <body>
 
-<h1>This is my first web app on Azure!</h1>
+<h1>This Website was created using the GitHub Pages!</h1>
 
 </body>
 </html
