Added html and Bootstrap links

--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
 <title>
 demo project
 </title>
+  
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<style>
+  
+  .bg-1{
+      background-color:green;
+      color:white;
+  }
+  
+  container-fluid{
+    padding-top:80px;
+    padding-bottom:80px;
+  }
 </head>
 <body>
 
-<h1>This Website was created using the GitHub Pages!</h1>
+  <div class="container-fluid text-center bg1">
+<h1>Hello World!</h1>
+  <img class="img-circle img-responsive" src="https://vignette2.wikia.nocookie.net/logopedia/images/e/ee/Windows_logo_–_2012_(dark_blue).svg/revision/latest/scale-to-width-down/195?cb=20160311195341" alt="image"/>
+  <h3>Windows 10</h3>
+    
+    </div>
+  
 
+<!-- Latest compiled and minified JavaScript -->
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html
