--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,6 +20,7 @@ demo project
     padding-top:80px;
     padding-bottom:80px;
   }
+  </style>
 </head>
 <body>
 
