corrected container-fluid class
Added missing dot (.)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+.
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,7 +16,7 @@ demo project
       color:white;
   }
   
-  container-fluid{
+  .container-fluid{
     padding-top:80px;
     padding-bottom:80px;
   }
