corrected bg-1 class tag

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@ demo project
   .container-fluid{
     padding-top:80px;
     padding-bottom:80px;
+    text-align:center;
   }
   </style>
 </head>
 <body>
 
-  <div class="container-fluid text-center bg1">
+  <div class="container-fluid text-center bg-1">
 <h1>Hello World!</h1>
   <img class="img-circle img-responsive" src="https://vignette2.wikia.nocookie.net/logopedia/images/e/ee/Windows_logo_–_2012_(dark_blue).svg/revision/latest/scale-to-width-down/195?cb=20160311195341" alt="image"/>
   <h3>Windows 10</h3>
